tests/invalid/top-level-scalar1.nxt
# top level must be dictionary or list
hello
